# rio-file

./: .gitignore  BUILD.md  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
