[package]
name = "rio-file-explorer"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "1.5", features = ["api-all", "custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
ssh2 = "0.9"
